<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.teamnoob.sacstaterideshare.ActivityChangePassword"
    android:background="@drawable/android">

    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:text="@string/string_change_password"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:text="@string/string_new_password"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/newPassword"
        android:hint="@string/string_new_password"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:password="false"
        android:inputType="textPassword" />

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/action_cancel"
        android:id="@+id/buttonCancel"
        android:textColor="#000000"
        android:textSize="13sp"
        android:layout_above="@+id/alertPassword"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/action_change_password"
        android:id="@+id/buttonChangePassword"
        android:textColor="#000000"
        android:textSize="13sp"
        android:layout_below="@+id/newPassword"
        android:layout_alignEnd="@+id/newPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:id="@+id/alertPassword"
        android:textColor="#000000"
        android:layout_below="@+id/buttonChangePassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
