<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.teamnoob.sacstaterideshare.RatingActivity"
    android:background="@drawable/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/onTime"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarOnTime"
        android:numStars="5"
        android:rating="4.5"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TV_clean"
        android:id="@+id/textView2"
        android:layout_below="@+id/ratingBarOnTime"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarClean"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/ratingBarOnTime"
        android:numStars="5"
        android:rating="3.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TV_comment"
        android:id="@+id/textViewComTitle"
        android:layout_below="@+id/ratingBarClean"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TV_Com1"
        android:id="@+id/textViewComNum1"
        android:layout_below="@+id/textViewComTitle"
        android:layout_toStartOf="@+id/editText_Comment1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_Comment1"
        android:text="Was a nice ride, very polite"
        android:layout_below="@+id/textViewComTitle"
        android:layout_alignStart="@+id/ratingBarClean" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2."
        android:id="@+id/textViewComNum2"
        android:layout_below="@+id/editText_Comment1"
        android:layout_alignStart="@+id/textViewComNum1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_comment2"
        android:text="Car was a little dirty but was on time and over all good experience."
        android:layout_below="@+id/editText_Comment1"
        android:layout_alignStart="@+id/editText_Comment1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="3."
        android:id="@+id/textViewComNum3"
        android:layout_below="@+id/editText_comment2"
        android:layout_alignStart="@+id/textViewComNum2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_comment3"
        android:text="Overall great driver, felt safe and car was running good."
        android:layout_below="@+id/editText_comment2"
        android:layout_alignStart="@+id/editText_comment2" />

</RelativeLayout>
